Fixed visual glitch when loading icon is visible.

--- a/Vault/wwwroot/css/login.css
+++ b/Vault/wwwroot/css/login.css
@@ -896,6 +896,7 @@ tspan {
     left: 0;
     width: 100%;
     height: 100%;
+    overflow-y: hidden;
     background: white;
     display: none;
     -webkit-animation: fadein 0.4s;
